@@ -1376,8 +1376,8 @@ static NSString *ConfigToolbarItem = @"Config";
             [TERMINAL defaultFGColor],@"Foreground",
             [TERMINAL defaultBGColor],@"Background",
             [TEXTVIEW selectionColor],@"SelectionColor",
-            [NSString stringWithInt:WIDTH],@"Row",
-            [NSString stringWithInt:HEIGHT],@"Col",
+            [NSString stringWithInt:WIDTH],@"Col",
+            [NSString stringWithInt:HEIGHT],@"Row",
             [NSNumber numberWithInt:100-[[TERMINAL defaultBGColor] alphaComponent]*100],@"Transparency",
             [[self currentSession] TERM_VALUE],@"Term Type",
             [old objectForKey:@"Directory"],@"Directory",
@@ -1398,8 +1398,8 @@ static NSString *ConfigToolbarItem = @"Config";
             [NSNumber numberWithUnsignedInt:[TERMINAL encoding]],@"Encoding",
             [TERMINAL defaultFGColor],@"Foreground",
             [TERMINAL defaultBGColor],@"Background",
-            [NSString stringWithInt:WIDTH],@"Row",
-            [NSString stringWithInt:HEIGHT],@"Col",
+            [NSString stringWithInt:WIDTH],@"Col",
+            [NSString stringWithInt:HEIGHT],@"Row",
             [NSNumber numberWithInt:100-[[TERMINAL defaultBGColor] alphaComponent]*100],@"Transparency",
             [[self currentSession] TERM_VALUE],@"Term Type",
             (old?[old objectForKey:@"Directory"]:@""),@"Directory",
